# pdf-to-visio-converter

./: .gitignore  README.md  pyproject.toml
pdf_to_visio/: __init__.py  __main__.py  dwg_converter.py  dxf_converter.py  emf_converter.py
tests/: test_converter.py
