[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdf-to-visio-converter"
version = "1.0.0"
description = "Convert PDF engineering drawings to Visio-compatible SVG format"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pymupdf>=1.24.0"]

[project.optional-dependencies]
dxf = ["ezdxf>=1.0"]
dev = ["pytest>=8.0", "ezdxf>=1.0"]

[project.urls]
Repository = "https://github.com/hotepfederales-creator/pdf-to-visio-converter"

[tool.pytest.ini_options]
testpaths = ["tests"]
